# cpp-linux-hardware-bus-driver-simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROTOCOL.md  TEST_STRATEGY.md
examples/: demo_commands.md
include/lhbd/core/: DeviceDriver.hpp
include/lhbd/protocol/: Crc32.hpp  Frame.hpp  FrameCodec.hpp  Protocol.hpp
include/lhbd/transport/: ITransport.hpp  MockTransport.hpp  UnixSocketTransport.hpp
include/lhbd/utils/: Logger.hpp
scripts/: run_integration_test.py
simulator/: device_simulator.py
src/apps/: device_cli.cpp
src/core/: DeviceDriver.cpp
src/protocol/: Crc32.cpp  FrameCodec.cpp
src/transport/: MockTransport.cpp  UnixSocketTransport.cpp
src/utils/: Logger.cpp
tests/: test_main.cpp
